# msconverter

./: LICENSE  README.md  pyproject.toml
demoNotebook/: msconverter_demo.ipynb
src/msconverter/: convert.py
